# Sequoia-X

./: .gitignore  README.md  main.py  pyproject.toml
sequoia_x/data/: engine.py
sequoia_x/web/: __init__.py  app.py  env_writer.py  services.py
sequoia_x/web/routes/: __init__.py  api.py  pages.py
sequoia_x/web/static/css/: custom.css
sequoia_x/web/static/js/: app.js
sequoia_x/web/templates/: base.html  config.html  index.html  stock_browser.html  strategy_detail.html  system.html
